@@ -19,7 +19,17 @@ Changes Since 0.14
 * General
 
   - Dropped support for Python 2.4, 2.5, 3.1, and 3.2.
-  - infrastructure automatisms.
+  - Infrastructure automation.
+
+* docutils/parsers/rst/states.py:
+
+  - Allow embedded colons in field list field names (also updated
+    docs/ref/rst/restructuredtext.txt).
+
+* docutils/parsers/rst/directives/html.py:
+
+  - [Fix for bug 281:] Allow backslash-escaped colons in meta directive
+    field list field names (also updated docs/dev/todo.txt).
 
 * docutils/writers/latex2e/__init__.py
 
